[package]
name = "am2320_i2c_pmw_led_rust_stm32f103"
version = "0.1.0"
authors = ["aivel"]
edition = "2021"
readme = "README.md"

[dependencies]
cortex-m = {version="0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = {version="0.7.3"}
embedded-hal = "0.2.7"
am2320 = "*"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[dependencies.rtt-target]
version = "0.4.0"

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv7-backend"]

[dependencies.rtic-monotonics]
version = "*"
features = ["cortex-m-systick"]

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

# this lets you use `cargo fix`!
[[bin]]
name = "am2320_i2c_pmw_led_rust_stm32f103"
test = false
bench = false

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash

[profile.dev]
# use the same configuration for dev and release, as linker gives an error if
# binaries are to large, which happens quickly without optimisations.
opt-level = 3
debug-assertions = false
overflow-checks = false
panic = 'abort'
incremental = false
rpath = false
lto = true
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash



